--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         .perk-item p {
             color: #555;
         }
+        .license {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            padding: 20px;
+            text-align: center;
+            margin-top: 30px;
+        }
+        .license h2 {
+            color: #4CAF50;
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -107,6 +118,12 @@
             <h3>Customizable Options</h3>
             <p>We provide flexible and customizable solutions tailored to your specific needs.</p>
         </div>
+    </section>
+
+    <section class="license">
+        <h2>Get Your Own License Key!</h2>
+        <p>With your own license key, you can enjoy personalized access to our services.</p>
+        <p>Sign up now to receive your unique key and unlock premium features!</p>
     </section>
 </div>
 
