--- a/index.html
+++ b/index.html
@@ -4,128 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perks of Our Service</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 20px;
-        }
-        .perks {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            gap: 20px;
-        }
-        .perk-item {
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            width: 30%;
-            padding: 20px;
-            text-align: center;
-            transition: transform 0.3s ease;
-        }
-        .perk-item:hover {
-            transform: translateY(-10px);
-        }
-        .perk-item img {
-            width: 80px;
-            height: 80px;
-            margin-bottom: 20px;
-        }
-        .perk-item h3 {
-            margin-bottom: 15px;
-            color: #4CAF50;
-        }
-        .perk-item p {
-            color: #555;
-        }
-        .license {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            padding: 20px;
-            text-align: center;
-            margin-top: 30px;
-        }
-        .license h2 {
-            color: #4CAF50;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: white;
-        }
-        footer a {
-            color: #4CAF50;
-            text-decoration: none;
-        }
-    </style>
 </head>
 <body>
 
-<header>
-    <h1>Perks of Our Service</h1>
-    <p>Discover the benefits of choosing us!</p>
-</header>
+<h1>Perks of Our Service</h1>
+<p>Discover the benefits of choosing us!</p>
 
-<div class="container">
-    <section class="perks">
-        <div class="perk-item">
-            <img src="https://via.placeholder.com/80" alt="Fast Service Icon">
-            <h3>Fast Service</h3>
-            <p>We ensure quick and efficient delivery of services so you can focus on what matters.</p>
-        </div>
-        <div class="perk-item">
-            <img src="https://via.placeholder.com/80" alt="Premium Quality Icon">
-            <h3>Premium Quality</h3>
-            <p>Our service is of the highest quality, ensuring satisfaction with every use.</p>
-        </div>
-        <div class="perk-item">
-            <img src="https://via.placeholder.com/80" alt="24/7 Support Icon">
-            <h3>24/7 Support</h3>
-            <p>We offer round-the-clock support to help you whenever you need it.</p>
-        </div>
-        <div class="perk-item">
-            <img src="https://via.placeholder.com/80" alt="Affordable Pricing Icon">
-            <h3>Affordable Pricing</h3>
-            <p>Get the best value for your money with our competitive pricing structure.</p>
-        </div>
-        <div class="perk-item">
-            <img src="https://via.placeholder.com/80" alt="User-Friendly Icon">
-            <h3>User-Friendly</h3>
-            <p>Our platform is designed with user experience in mind, making it easy for anyone to use.</p>
-        </div>
-        <div class="perk-item">
-            <img src="https://via.placeholder.com/80" alt="Customizable Icon">
-            <h3>Customizable Options</h3>
-            <p>We provide flexible and customizable solutions tailored to your specific needs.</p>
-        </div>
-    </section>
+<h2>Our Perks:</h2>
+<ul>
+    <li><strong>Fast Service:</strong> Quick and efficient delivery of services.</li>
+    <li><strong>Premium Quality:</strong> High-quality service ensuring satisfaction.</li>
+    <li><strong>24/7 Support:</strong> Round-the-clock support for your needs.</li>
+    <li><strong>Affordable Pricing:</strong> Best value for your money.</li>
+    <li><strong>User-Friendly:</strong> Easy to use platform.</li>
+    <li><strong>Customizable Options:</strong> Flexible solutions tailored to you.</li>
+</ul>
 
-    <section class="license">
-        <h2>Get Your Own License Key!</h2>
-        <p>With your own license key, you can enjoy personalized access to our services.</p>
-        <p>Sign up now to receive your unique key and unlock premium features!</p>
-    </section>
-</div>
+<h2>Get Your Own License Key!</h2>
+<p>With your own license key, you can enjoy personalized access to our services. Sign up now to receive your unique key and unlock premium features!</p>
 
 <footer>
     <p>&copy; 2024 Our Service | <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
